docs/v2.0.0/contents/tanim-ve-kisitlamalar.md
<h1> 1.Tanım ve Kısaltmalar</h1>  

**Tablo 1: Tanım ve Kısaltmalar**

|Tanım| 	Açıklama
| --- |--- |
| **Alacaklı (Müşteri)** |Öİ akışını başlatan ve Öİ akabinde gerçekleşen ödeme ve para transferi işleminde fonun transfer edildiği gerçek veya tüzel kişidir|
| **Havale** |Borçlu ve Alacaklı’nın aynı ÖHS nezdinde bulunan hesapları arasında gerçekleştirilen fon transfer işlemleridir|
| **Bildirim** |Müşterilerin dikkat çekici yöntemler ile (kısa mesaj, sesli/görsel uyarı, ödeme kaydedici cihaz bildirimi, sistemsel entegrasyon vb.) anlık bilgilendirilmesini sağlamak amacıyla yapılan uyarılardır|
| **ÖİOZ** |Ödeme İste Oluşturulma Zamanı: Öİ’nin oluşturulduğu zamandır.|
| **SGZ** |Son Geçerlilik Zamanı: Borçlu’nun Öİ talebine yanıt verebileceği son zaman bilgisidir. Bu zamandan sonra Öİ talebi geçersiz sayılacaktır.|
| **TEÖZ** |Talep Edilen Ödeme Zamanı: Alacaklı’nın, Öİ talimatı içerisinde yer alan ve ödemenin yapılmasını talep ettiği tarih/zaman bilgisidir.|
| **DTS** |Doğrulama Tolerans Süresi: Alacaklı ÖHS tarafından yapılacak doğrulama kontrollerinde iletişim hattında geçen sürenin de gözetilmesi için kullanılacak ilave süredir. Bu süre sistem tarafından belirlenir ve 60 saniyedir.|
| **BKM** |Bankalararası Kart Merkezi Anonim Şirketi|
| **İşyeri** |Ödeme hizmeti sağlayıcısı ile yaptığı sözleşme çerçevesinde, bir mal veya hizmet bedeline ilişkin FAST veya Havale ödemesinin bu belge kapsamında gönderilmiş Ödeme İste akışı kullanılarak yapılmasını alıcı taraf olarak kabul eden gerçek veya tüzel kişidir|
| **Borçlu (Müşteri)** |Ödeme İste’nin sunulduğu, ödeme veya para transfer emrini veren gerçek veya tüzel kişidir|
| **FAST** |TCMB tarafından işletilen Fonların Anlık ve Sürekli Transferi Sistemidir|
| **Kanun** |20/6/2013 tarihli ve 6493 sayılı Ödeme ve Menkul Kıymet Mutabakat Sistemleri, Ödeme Hizmetleri ve Elektronik Para Kuruluşları Hakkında Kanun|
| **Katılımcı** |Ödeme İste Sistemi Katılım Sözleşmesini imzalayarak Sisteme katılan ve doğrudan bağlantı kurarak Sisteme mesaj gönderme, Sistemden mesaj alma yetkisi bulunan sistem kurallarına uymakla yükümlü tüzel kişidir|
| **Katman Servisler** |FAST Sisteminde gerçekleştirilecek fon aktarımları öncesi veya sonrasında işlemleri kolaylaştırarak müşteri deneyimlerini iyileştirmeyi amaçlayan TCMB ya da yetki verdiği kuruluşlar tarafından sağlanan ürün ve hizmetlerdir|
| **Katılımcı Kodu** |TCMB tarafından belirlenerek Ödeme Hizmeti Sağlayıcılarına verilen koddur|
| **Kolay Adres** |Fon transferlerinde hesap numarası ile ad soyad yerine kullanılan ve belirli bir hesap ile eşleştirilmiş telefon numarası, e-posta adresi, T.C. Kimlik Numarası (TCKN), Vergi Kimlik Numarası (VKN), Yabancı Kimlik Numarası veya Pasaport Numarası gibi Kolay Adresleme Sistemine ilişkin belgede belirtilen adreslerdir|
| **Kolay Adresleme Sistemi (KOLAS)** |Kolay Adres bilgilerinin kaydedilmesini, güncellenmesini ve sorgulamasını sağlayan katman servistir|
| **Müşteri** |ÖHS tarafından sunulan ödeme hizmetlerinin tüketicisi olan bireysel veya tüzel kişilerdir|
| **Ödeme Hizmeti Sağlayıcısı (ÖHS)** |Kanun’un 13 üncü maddesinde belirtilen kuruluşlardır|
| **Ödeme İste** |Borçlu’nun ödeme başlatması amacıyla Alacaklı tarafından Borçlu’ya iletilen taleptir|
| **Ödeme İste Sistemi** |Borçlu’nun ödeme başlatması amacıyla Alacaklı tarafından Borçlu’ya talebini iletmesini sağlayan ve BKM tarafından işletilen katman servistir|
| **TCMB** |Türkiye Cumhuriyet Merkez Bankası Anonim Şirketi|
